Added FaQ Pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -415,7 +415,7 @@
           </div>
         </div>
       </section>
-      <!-- <section class="students-acheiv">
+      <section class="students-acheiv">
         <div class="container">
           <div class="row-up">
             <div class="heading">
@@ -487,7 +487,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
       <section class="about">
         <div class="container">
           <div class="row-up">
