--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recruitment Portal | IIIT Bhagalpur</title>
 
-    <link rel="stylesheet" href="/public/css/jaf.css">
-    <link rel="icon" type="image/png" href="./resources/iiitbh_logo.jpg" sizes="96x96">
+    <link rel="stylesheet" href="/css\jaf.css">
+    <link rel="icon" type="image/png" href="/assets/square-logo.png" sizes="96x96">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="logo">
             <div class="image">
-                <img src="./resources/iiitbh_logo.jpg" alt="iiitbh_logo">
+                <img src="/assets/square-logo.png" alt="iiitbh_logo">
             </div>
             <div class="text">
                 <h1>Recruitment Portal</h1>
