updated jaf : comented out nav

--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar">
+    <!-- <nav class="navbar">
         <div class="logo">
             <div class="image">
                 <img src="/assets/square-logo.png" alt="iiitbh_logo">
@@ -35,7 +35,7 @@
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
 
     <section class="job-section">
         <div class="main-container">
