--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,16 +76,9 @@
 
     <title>Training & Placement Cell | IIIT Bhagalpur</title>
 
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="/assets/fevicon.svg"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/fevicon.svg" />
     <link rel="stylesheet" href="/css/main.css" />
-    <link
-      rel="stylesheet"
-      href="/fontawesome-free-6.1.2-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"
@@ -107,8 +100,8 @@
         </div>
       </div>
     </section> -->
-    <%# var path=require('path')%>
-    <%# console.log(path.resolve(__dirname,'/assets/fevicon.svg'))%>
+    <%# var path=require('path')%> <%#
+    console.log(path.resolve(__dirname,'/assets/fevicon.svg'))%>
     <section class="after-load">
       <%-include("./nav.ejs")%>
       <section class="banner">
@@ -141,7 +134,7 @@
                   <div class="recruit-btns">
                     <button
                       class="register"
-                      onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSdRZ-iuB3lRfJKCPU2DpH0ZRSEjAbDZNidt9bgTa51g0fS3pg/viewform'"
+                      onclick="window.open('/jaf','_target');"
                     >
                       Register now
                     </button>
@@ -616,10 +609,7 @@
               </div>
               <div class="contact-card">
                 <div class="card-img">
-                  <img
-                    src="/assets\Sangeeta_sharma.jpg"
-                    alt="card image"
-                  />
+                  <img src="/assets\Sangeeta_sharma.jpg" alt="card image" />
                 </div>
                 <div class="card-content">
                   <h3>Sangeeta Sharma</h3>
