JAF FORM Model Created

--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="/css\jaf.css">
     <link rel="icon" type="image/png" href="/assets/square-logo.png" sizes="96x96">
+    <script defer type="text/javascript" src="/js/jaf.js"></script>
 </head>
 
 <body>
@@ -88,7 +89,7 @@
                     <div class="heading">
                         <h1>Fill Application Details</h1>
                     </div>
-                    <form action="">
+                    <form id="recruit">
                         <div class="common-div">
                             <h2>General Information:</h2>
                             <div class="row-div">
