completed 1 and 3 section for jaf.

--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -39,54 +39,92 @@
 
     <section class="job-section">
         <div class="main-container">
+            <div class="banner">
+                <img src="\assets\jaf-banner.png" alt="JAF - Job Announcement Form">
+            </div>
             <div class="job-container">
                 <div class="instruction">
-                    <h1>1. Read Instructions</h1>
+                    <h1>1. Instructions</h1>
                 </div>
                 <div class="forms">
-                    <h1>2. Fill Form</h1>
+                    <h1>2. Fill Details</h1>
                 </div>
                 <div class="print">
-                    <h1>3. Print Application</h1>
+                    <h1>3. Submit</h1>
                 </div>
             </div>
             <div class="job-content-1">
+                <div class="heading">
+                    <h1>Instructions</h1>
+                </div>
                 <div class="rules">
-                    <div class="top">
-                        <h1> Please read instructions carefully before filling the form:</h1>
-                        <p>1. Please put NA which is not applicable for you.</p>
-                        <p>2. You have to fill all fields of all sub menu.</p>
-                    </div>
                     <div class="bottom">
-                        <h1> Filled Application Form, Credit Point Details Sheet and Self attested copies of the
-                            following documents must be send in order of :</h1>
-                        <p>A valid photo ID.</p>
-                        <p>Proof of date of birth.</p>
-                        <p>Category certificate for SC/ST.</p>
-                        <p>Category certificate for OBC (Non-Creamy Layer) / EWS (Income and Asset Certificate) obtained
-                            on or after 01/04/2022.</p>
-                        <p>Category certificate for PwD (if applicable).</p>
-                        <p>Academic records (Marks/Grade Cards and Certificates from SSLC/Matriculation onwards up to
-                            Ph.D.).</p>
-                        <p>Experience certificates.</p>
-                        <p>Salary certificate/Pay Slip of current employment.</p>
-                        <p>Publications (copy of first page of publications), patents and copyrights details.</p>
-                        <p>Details of Workshops/Conferences/Short Term Programs organized.</p>
-                        <p>Certificate of Training/Summer/Winter Schools attended.</p>
-                        <p>Conferences/Workshops attended and presented papers.</p>
-                        <p>Details of Sponsored and Consultancy Projects.</p>
-                        <p>Fellowship/Membership of Professional Bodies.</p>
-                        <p>Awards and Recognitions.</p>
-                        <p>Testimonials. (If any)</p>
-                        <p>Other Relevant Certificates.</p>
-                        <p>Reprint of three of your best research papers.</p>
+                        <ul>
+                            <li>
+                                Companies are contacted by the Placement office or Placement
+                                cell (authorized student representatives) and invitations
+                                are extended, providing relevant information and the
+                                placement brochure.
+                            </li>
+                            <li>
+                                Companies are given an exclusive login id in the website
+                                after they submit the filled-in job announcement forms (JAF)
+                                via email.
+                            </li>
+                            <li>
+                                The JAFs are made available online, which helps the willing
+                                students to register for the same.
+                            </li>
+                            <li>
+                                The Placement Cell and the Company confer and finalize the
+                                date for pre-placement talks if necessary. During the
+                                pre-placement talk the company team can interact with the
+                                students and impart to them, an idea of what the company
+                                requires.
+                            </li>
+                            <li>
+                                Each student who has registered for a particular company
+                                submits his/her resume so that the company can shortlist the
+                                applied students according to their grade or any other
+                                criteria the company demands.
+                            </li>
+                            <li>
+                                A detailed schedule is prepared by the Placement Cell
+                                evaluating the job offer, prospects, student intake and the
+                                like. The schedule is confirmed with all the companies that
+                                have applied to recruit.
+                            </li>
+                            <li>
+                                The companies/organizations visit the IIIT Bhagalpur campus/
+                                IIT Guwahati campus, meet the registered (or shortlisted as
+                                the case may be) students, and conduct the interviews, tests
+                                or group discussion sessions in accordance with their
+                                respective recruitment process. The date of the interview
+                                and other sessions should be in compliance with the mutually
+                                confirmed schedule discussed earlier.
+                            </li>
+                            <li>
+                                The companies are required to prepare and submit, with a
+                                written confirmation letter the list of students who are
+                                selected after the interview process, on the day of the
+                                interview itself.
+                            </li>
+                            <li>
+                                The job offer letters are to reach the Placement Cell, in
+                                due course of time.
+                            </li>
+                            <li>
+                                In case a student gets a job offer, he/she is not entitled
+                                to appear for further tests/interviews by any other company.
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
             <div class="job-content-2">
                 <div class="form-container">
                     <div class="heading">
-                        <h1>Fill Application Details</h1>
+                        <h1>Registration Details</h1>
                     </div>
                     <form action="">
                         <div class="common-div">
@@ -451,20 +489,20 @@
                             </div>
                         </div>
                         <div class="new_btn submit-btn">
-                            <button type="submit" class="btn">Save Details</button>
+                            <button type="submit" class="btn">Done</button>
                         </div>
                     </form>
                 </div>
             </div>
             <div class="job-content-3">
                 <div class="heading">
-                    <h1>Final Step: Print Your Application Details</h1>
+                    <h1>Submition Details</h1>
                 </div>
                 <div class="preview">
-                    <h2> 📄document preview.pdf </h2>
+                    <p>By submitting this document, You are confirming that all the details provided by you are correct and accurate to the best of your knowledge. You understand that any false or misleading information may result in rejection.</p>
                 </div>
                 <div class="new_btn submit-btn">
-                    <button type="print" class="btn">Print Application</button>
+                    <button type="submit" class="btn">Final Submit</button>
                 </div>
             </div>
         </div>
