--- a/public/css/jaf.css
+++ b/public/css/jaf.css
@@ -158,7 +158,7 @@
     width: 100%;
     height: 45px;
     border-radius: 20px;
-    background-color: rgb(239, 200, 25);
+    background: rgb(239, 200, 25);
     border: none;
     font-size: 18px;
     font-family: inherit;
@@ -170,12 +170,13 @@
 
 .form-group button:hover {
     cursor: pointer;
-    border: 2px solid rgb(57, 252, 245);
+    border: 2px solid rgb(128, 104, 0);
+    background-color: #ffffff;
 }
 
 .new_btn button:hover{
     cursor: pointer;
-    border: 2px solid rgb(57, 252, 245);
+    border: 2px solid rgb(137, 112, 0);
 }
 
 
@@ -199,13 +200,24 @@
 .heading{
     width: 100%;
     align-items: center;
-    padding: 5% 0;
+    padding-bottom: 5%;
 }
 .heading h1{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
     color: #4E4E4E;
+}
+
+.banner{
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 5%;
+}
+
+.banner img{
+    width: 100%;
+    border-radius: 20px;
 }
 
 .common-div{
@@ -225,6 +237,11 @@
     font-size: 20px;
 }
 
+.submit-btn:hover{
+    background: none;
+    color:rgb(131, 109, 12);
+}
+
 /* job part */
 .main-container{
     width: 90%;
@@ -242,7 +259,7 @@
     align-items: center;
     width: 90%;
     height: 80px;
-    margin: 5% auto;
+    margin: 3% auto;
     z-index: 99;
     background-color: #fafeff;
     border-radius: 20px;
@@ -293,6 +310,20 @@
     margin-bottom: 1%;
 }
 
+.rules ul{
+    width: 100%;
+    padding: 0 2%;
+}
+
+.rules li{
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #3c3c3c;
+    margin-bottom: 1%;
+    list-style: lower-roman;
+}
+
 .common-div h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
@@ -309,5 +340,9 @@
     height: 100%;
     margin: 0 auto;
     margin-bottom: 5%;
+
+    font-family: sans-serif;
+    font-size: 16px;
+    color: #0000FF;
 }
 
