--- a/public/css/jaf.css
+++ b/public/css/jaf.css
@@ -1,348 +1,427 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+}
+
+body {
+  width: 100%;
 }
 
 .navbar {
-    width: 90%;
-    height: 10vh;
-    margin: 1% auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  width: 90%;
+  height: 10vh;
+  margin: 1% auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .logo {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .logo .image {
-    height: 100%;
-    width: auto;
+  height: 100%;
+  width: auto;
 }
 
 .image img {
-    height: 100%;
-    width: auto;
-    padding: 5%;
-    margin-right: 10px;
+  height: 100%;
+  width: auto;
+  padding: 5%;
+  margin-right: 10px;
 }
 
 .logo .text {
-    color: #4E4E4E;
-    font-family: Arial, Helvetica, sans-serif;
+  color: #4e4e4e;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .text h1 {
-    font-size: 30px;
-    font-weight: 600;
+  font-size: 30px;
+  font-weight: 600;
 }
 
 .text h2 {
-    font-size: 24px;
-    font-weight: 400;
+  font-size: 24px;
+  font-weight: 400;
 }
 
 .menu {
-    height: 100%;
-    width: auto;
-    align-items: center;
+  height: 100%;
+  width: auto;
+  align-items: center;
 }
 
 .menu ul {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .menu ul li {
-    padding: 10% 10%;
-    list-style: none;
+  padding: 10% 10%;
+  list-style: none;
 }
 
 .menu a {
-    text-decoration: none;
-    font-size: 18px;
-    font-family: sans-serif;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: sans-serif;
 }
 
 .login-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    text-align: left;
-    font-size: 20px;
-    font-family: 'Arial';
-    color: #4e4e4e;
-    font-weight: 600;
+  text-align: left;
+  font-size: 20px;
+  font-family: "Arial";
+  color: #4e4e4e;
+  font-weight: 600;
 
-    margin: 5% 20%;
-    width: 60%;
-    background-color: #fafeff;
-    border-radius: 20px;
-    box-shadow: 2px 4px 20px 10px rgba(162, 162, 162, 0.2);
+  margin: 5% 20%;
+  width: 60%;
+  background-color: #fafeff;
+  border-radius: 20px;
+  box-shadow: 2px 4px 20px 10px rgba(162, 162, 162, 0.2);
 }
 
 .content-div {
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 
 .content-div .title {
-    margin: 10% 0;
+  margin: 10% 0;
+}
+
+.job-content-1 {
+    width: 90%;
+    padding: 3%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.job-content-1 .heading, .job-content-1 .rules {
+    width: 90%;
+    word-wrap: break-word;
 }
 
 .form-div {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 20px;
-    background-color: white;
-    box-shadow: 2px 4px 20px 10px rgba(150, 150, 150, 0.2);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  background-color: white;
+  box-shadow: 2px 4px 20px 10px rgba(150, 150, 150, 0.2);
 }
 
 .form-group {
-    padding: 20px 30px;
-    font-size: 20px;
-    font-family: sans-serif;
-    color: #4E4E4E;
-    width: 100%;
+  padding: 20px 30px;
+  font-size: 20px;
+  font-family: sans-serif;
+  color: #4e4e4e;
+  width: 100%;
 }
 
-.form-control, .form-group select, .form-group textarea {
-    height: 45px;
-    width: 100%;
-    display: block;
-    padding: 10px 15px;
-    border-radius: 15px;
-    background-color: #f8feff;
-    border: 1px solid transparent;
-    box-shadow: inset 2px 2px 5px 2px rgba(100, 100, 100, 0.25);
-    font-size: 18px;
-    font-family: inherit;
-    text-transform: capitalize;
-    color: rgb(225, 183, 0);
-    font-weight: 300;
-    transition: all 0.5s ease;
+.form-control,
+.form-group select,
+.form-group textarea {
+  height: 45px;
+  width: 100%;
+  display: block;
+  padding: 10px 15px;
+  border-radius: 15px;
+  background-color: #f8feff;
+  border: 1px solid transparent;
+  box-shadow: inset 2px 2px 5px 2px rgba(100, 100, 100, 0.25);
+  font-size: 18px;
+  font-family: inherit;
+  text-transform: capitalize;
+  color: rgb(225, 183, 0);
+  font-weight: 300;
+  transition: all 0.5s ease;
 }
 
 .form-control::placeholder {
-    color: rgb(187, 187, 187);
+  color: rgb(187, 187, 187);
 }
 
 .form-control:focus {
-    border: rgb(252, 229, 57);
+  border: rgb(252, 229, 57);
 }
 
 .form-group h3 {
-    font-size: 20px;
-    margin-bottom: 2vh;
+  font-size: 20px;
+  margin-bottom: 2vh;
 }
-.new_btn{
-    height: 50px;
-    width: 20vh;
-    margin: 10% 0;
+.new_btn {
+  height: 50px;
+  width: 20vh;
+  margin: 10% 0;
 }
-.form-group button, .new_btn button {
-    width: 100%;
-    height: 45px;
-    border-radius: 20px;
-    background: rgb(239, 200, 25);
-    border: none;
-    font-size: 18px;
-    font-family: inherit;
-    text-transform: capitalize;
-    color: rgb(250, 255, 254);
-    font-weight: 300;
-    transition: all 0.5s ease;
+.form-group button,
+.new_btn button {
+  width: 100%;
+  height: 45px;
+  border-radius: 20px;
+  background: rgb(239, 200, 25);
+  border: none;
+  font-size: 18px;
+  font-family: inherit;
+  text-transform: capitalize;
+  color: rgb(250, 255, 254);
+  font-weight: 300;
+  transition: all 0.5s ease;
 }
 
 .form-group button:hover {
-    cursor: pointer;
-    border: 2px solid rgb(128, 104, 0);
-    background-color: #ffffff;
+  cursor: pointer;
+  border: 2px solid rgb(128, 104, 0);
+  background-color: #ffffff;
 }
 
-.new_btn button:hover{
-    cursor: pointer;
-    border: 2px solid rgb(137, 112, 0);
+.new_btn button:hover {
+  cursor: pointer;
+  border: 2px solid rgb(137, 112, 0);
+}
+fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  background-color: #f8feff;
+  border: 1px solid transparent;
+  box-shadow: inset 2px 2px 5px 2px rgba(100, 100, 100, 0.25);
+  height: 100%;
+}
+.checkbox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 1% 0;
+  width: 100%;
+}
+.checkbox input {
+  width: 30%;
+}
+.checkbox label {
+  width: 70%;
+  text-align: center;
 }
 
-
-@media (max-width: 950px) {
-    .login-container {
-        width: 90%;
-        margin: 5% auto;
-    }
-}
-
-.container{
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    margin: 5% auto;
-    background-color: #fafeff;
-    border-radius: 20px;
-    box-shadow: 2px 4px 20px 10px rgba(162, 162, 162, 0.2);
-}
-
-.heading{
-    width: 100%;
-    align-items: center;
-    padding-bottom: 5%;
-}
-.heading h1{
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 32px;
-    color: #4E4E4E;
-}
-
-.banner{
+@media (max-width: 992px) {
+  .login-container {
     width: 90%;
-    margin: 0 auto;
-    margin-top: 5%;
+    margin: 5% auto;
+  }
 }
 
-.banner img{
-    width: 100%;
-    border-radius: 20px;
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 5% auto;
+  background-color: #fafeff;
+  border-radius: 20px;
+  box-shadow: 2px 4px 20px 10px rgba(162, 162, 162, 0.2);
 }
 
-.common-div{
-    display: flex;
-    flex-direction: column;
+.heading {
+  width: 100%;
+  align-items: center;
+  padding-bottom: 5%;
 }
-.row-div{
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.submit-btn{
-    align-items: center;
-    width: 240px;
-    margin: 2% auto;
-    font-family: sans-serif;
-    font-size: 20px;
+.heading h1 {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 32px;
+  color: #4e4e4e;
 }
 
-.submit-btn:hover{
-    background: none;
-    color:rgb(131, 109, 12);
+.banner {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 5%;
+}
+
+.banner img {
+  width: 100%;
+  border-radius: 20px;
+}
+
+.common-div {
+  display: flex;
+  flex-direction: column;
+}
+.row-div {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.submit-btn {
+  align-items: center;
+  width: 240px;
+  margin: 2% auto;
+  font-family: sans-serif;
+  font-size: 20px;
+}
+
+.submit-btn:hover {
+  background: none;
+  color: rgb(131, 109, 12);
 }
 
 /* job part */
-.main-container{
-    width: 90%;
-    margin: 5% auto;
+.main-container {
+  width: 90%;
+  margin: 5% auto;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 2px 4px 20px 10px rgba(162, 162, 162, 0.2);
+}
+
+.job-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 90%;
+  height: 80px;
+  margin: 3% auto;
+  z-index: 99;
+  background-color: #fafeff;
+  border-radius: 20px;
+  box-shadow: 2px 4px 20px 10px rgba(162, 162, 162, 0.2);
+}
+
+.instruction,
+.forms,
+.print {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 50px;
+  width: 20vw;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  color: #4e4e4e;
+  border-radius: 40px;
+  border: 2px solid #4e4e4e;
+  background-color: rgb(255, 255, 255);
+}
+
+.job-content-1,
+.job-content-2,
+.job-content-3 {
+  width: 90%;
+  height: auto;
+  margin: 0 auto;
+  margin-bottom: 5%;
+}
+
+.rules {
+  display: flex;
+  flex-direction: column;
+}
+.rules .top,
+.rules .bottom {
+  margin-bottom: 2%;
+}
+.rules h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  color: #4e4e4e;
+  margin-bottom: 2%;
+}
+.rules p {
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #4e4e4e;
+  margin-bottom: 1%;
+}
+
+.rules ul {
+  width: 100%;
+  padding: 0 2%;
+}
+
+.rules li {
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #3c3c3c;
+  margin-bottom: 1%;
+  list-style: lower-roman;
+}
+
+.common-div h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  color: #4e4e4e;
+  margin: 2% 0;
+}
+
+.preview {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  margin-bottom: 5%;
+
+  font-family: sans-serif;
+  font-size: 16px;
+  color: #0000ff;
+}
+
+@media (max-width: 992px) {
+  .job-section {
+    width: 100%;
     display: flex;
+    align-items: center;
+    padding: 2%;
+  }
+  .job-container {
     flex-direction: column;
-    background-color: #ffffff;
-    border-radius: 20px;
-    box-shadow: 2px 4px 20px 10px rgba(162, 162, 162, 0.2);
-}
-.job-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 90%;
-    height: 80px;
-    margin: 3% auto;
-    z-index: 99;
-    background-color: #fafeff;
-    border-radius: 20px;
-    box-shadow: 2px 4px 20px 10px rgba(162, 162, 162, 0.2);
-}
-
-.instruction, .forms, .print{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 50px;
-    width: 20vw;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    color: #4E4E4E;
-    border-radius: 40px;
-    border: 2px solid #4E4E4E;
-    background-color: rgb(255, 255, 255);
-}
-
-.job-content-1, .job-content-2, .job-content-3{
-    width: 90%;
     height: auto;
-    margin: 0 auto;
-    margin-bottom: 5%;
-}
-
-.rules{
-    display: flex;
+  }
+  .instruction,
+  .forms,
+  .print {
+    width: 90%;
+    margin: 2% auto;
+  }
+  .row-div {
     flex-direction: column;
+  }
+  .job-content-1 {
+    padding: 3%;
+    width: 90%;
+  }
 }
-.rules .top, .rules .bottom{
-    margin-bottom: 2%;
-}
-.rules h1{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 24px;
-    font-weight: 600;
-    color: #4E4E4E;
-    margin-bottom: 2%;
-}
-.rules p{
-    font-family: sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    color: #4E4E4E;
-    margin-bottom: 1%;
-}
-
-.rules ul{
-    width: 100%;
-    padding: 0 2%;
-}
-
-.rules li{
-    font-family: sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    color: #3c3c3c;
-    margin-bottom: 1%;
-    list-style: lower-roman;
-}
-
-.common-div h2{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 24px;
-    font-weight: 600;
-    color: #4E4E4E;
-    margin: 2% 0;
-}
-
-.preview{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    margin-bottom: 5%;
-
-    font-family: sans-serif;
-    font-size: 16px;
-    color: #0000FF;
-}
-
