--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -338,10 +338,10 @@
                         <input type="checkbox" name="eligibility" value="M25" />
                         <label for="M25">M.Tech 2025</label>
                       </div>
-                      <div class="checkbox">
+                      <!-- <div class="checkbox">
                         <input type="checkbox" name="eligibility" value="B26" />
                         <label for="B26">B.Tech 2026</label>
-                      </div>
+                      </div> -->
                     </fieldset>
                   </div>
                   <div class="form-group">
@@ -581,18 +581,18 @@
                   </div>
                   <div class="form-group">
                     <h3 for="year">
-                      No. of rooms required for the selection process:
+                      No. of rooms & Days required for the selection process:
                     </h3>
                     <input
                       type="text"
                       name="ldrooms"
                       id="year"
                       class="form-control"
-                      placeholder="Enter number of days"
+                      placeholder="Enter number of rooms & days"
                       required
                     />
                   </div>
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <h3 for="year">No. of days of Stay:</h3>
                     <input
                       type="text"
@@ -602,7 +602,7 @@
                       placeholder="Enter number of days"
                       required
                     />
-                  </div>
+                  </div> -->
                 </div>
                 <div class="form-group">
                   <h3 for="o-info">Other requirements if any:</h3>
