--- a/public/css/jaf.css
+++ b/public/css/jaf.css
@@ -206,11 +206,12 @@ fieldset {
   width: 100%;
   align-items: center;
   justify-content: center;
+  align-items: left;
   border-radius: 15px;
   background-color: #f8feff;
   border: 1px solid transparent;
   box-shadow: inset 2px 2px 5px 2px rgba(100, 100, 100, 0.25);
-  height: 100%;
+  height: 90%;
 }
 .checkbox {
   display: flex;
@@ -221,11 +222,12 @@ fieldset {
   width: 100%;
 }
 .checkbox input {
-  width: 30%;
+  width: 20%;
+  height: 18px;
 }
 .checkbox label {
-  width: 70%;
-  text-align: center;
+  width: 80%;
+  text-align: left;
 }
 
 @media (max-width: 992px) {
