JAF Form Ready to use some Field LEft to Add

--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -305,9 +305,9 @@
                   <div class="form-group">
                     <h3 for="gnd">Job Offer Type</h3>
                     <select id="gnd" name="jobOffer">
-                      <option value="M">Full Time</option>
-                      <option value="F">Internship</option>
-                      <option value="O">Full Time + Internship</option>
+                      <option value="Full Time">Full Time</option>
+                      <option value="Internship">Internship</option>
+                      <option value="Full Time + Internship">Full Time + Internship</option>
                     </select>
                   </div>
                   <div class="form-group">
@@ -416,7 +416,7 @@
                     <h3 for="orcid">Cost to Co. (CTC):</h3>
                     <input
                       type="text"
-                      name="CTC"
+                      name="ctc"
                       id="orcid-id"
                       class="form-control"
                       placeholder="Enter CTC"
