--- a/views/visitors.ejs
+++ b/views/visitors.ejs
@@ -24,8 +24,8 @@
       type="image/x-icon"
       href="/assets/fevicon.svg"
     />
-    <link rel="stylesheet" href="/assets/main.css" />
-    <link rel="stylesheet" href="/assets\page-css\visitors.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/page-css\visitors.css" />
     <link
       rel="stylesheet"
       href="/fontawesome-free-6.1.2-web/css/all.min.css"
