--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -323,19 +323,19 @@
                     <h3 for="nation">Eligible Batches:</h3>
                     <fieldset id="nation">
                       <div class="checkbox">
-                        <input type="checkbox" name="eligibility" value="B24" />
+                        <input type="checkbox" id="B24" name="eligibility" value="B24" />
                         <label for="B24">B.Tech 2024</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" name="eligibility" value="M24" />
+                        <input type="checkbox" id="M24" name="eligibility" value="M24" />
                         <label for="M24">M.Tech 2024</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" name="eligibility" value="B25" />
+                        <input type="checkbox" id="B25" name="eligibility" value="B25" />
                         <label for="B25">B.Tech 2025</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" name="eligibility" value="M25" />
+                        <input type="checkbox" id="M25" name="eligibility" value="M25" />
                         <label for="M25">M.Tech 2025</label>
                       </div>
                       <!-- <div class="checkbox">
