Form link Updated

--- a/views/for-recruiters.ejs
+++ b/views/for-recruiters.ejs
@@ -568,7 +568,7 @@
           <div class="side-div-mid">
             <h2>Register for recruitment from IIIT Bhagalpur</h2>
             <div class="register-btn">
-              <a href="#">Register now</a>
+              <a href="/jaf">Register now</a>
             </div>
           </div>
           <div class="side-div-down">
@@ -1158,7 +1158,7 @@
             <h2>Register for recruitment from IIIT Bhagalpur</h2>
             <div class="register-btn">
               <a
-                href="https://docs.google.com/forms/d/e/1FAIpQLSdRZ-iuB3lRfJKCPU2DpH0ZRSEjAbDZNidt9bgTa51g0fS3pg/viewform"
+                href="/jaf"
                 >Register now</a
               >
             </div>
