--- a/views/index.ejs
+++ b/views/index.ejs
@@ -408,7 +408,7 @@
           </div>
         </div>
       </section>
-      <section class="students-acheiv">
+      <!-- <section class="students-acheiv">
         <div class="container">
           <div class="row-up">
             <div class="heading">
@@ -480,7 +480,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="about">
         <div class="container">
           <div class="row-up">
