--- a/views/index.ejs
+++ b/views/index.ejs
@@ -408,24 +408,32 @@
           </div>
         </div>
       </section>
-      <!-- <section class="students-acheiv">
+      <section class="students-acheiv">
         <div class="container">
           <div class="row-up">
             <div class="heading">
-              <h1>Students Achievements</h1>
+              <h1>Students Activities</h1>
               <div class="line-style">
                 <img src="/assets\Vector 8.svg" alt="line image" />
               </div>
             </div>
+            <div class="social">
+              <h4>Last updated: Jan, 2023 🔔</h4>
+              <!-- <a href="https://www.facebook.com/iiitbh_official/"
+                ><i class="fa-brands fa-facebook"></i
+              ></a> -->
+            </div>
           </div>
           <div class="row-down">
             <div class="activities">
-              <div class="graph"></div>
+              <div class="graph">
+                <img src="/assets\activity-graph.svg" alt="activity graph">
+              </div>
               <div class="detail-timeline">
                 <div class="timeline-item">
                   <div class="top-bar">
                     <div class="name">
-                      <h4>Competitive Programming</h4>
+                      <h3>Competitive Programming</h3>
                     </div>
                     <div class="icon"></div>
                   </div>
@@ -438,7 +446,7 @@
                 <div class="timeline-item">
                   <div class="top-bar">
                     <div class="name">
-                      <h4>Development</h4>
+                      <h3>Development / Open Source</h3>
                     </div>
                     <div class="icon"></div>
                   </div>
@@ -451,7 +459,7 @@
                 <div class="timeline-item">
                   <div class="top-bar">
                     <div class="name">
-                      <h4>Entreprenuership/Side Projects</h4>
+                      <h3>Entreprenuership / Side Projects</h3>
                     </div>
                     <div class="icon"></div>
                   </div>
@@ -465,7 +473,7 @@
                 <div class="timeline-item">
                   <div class="top-bar">
                     <div class="name">
-                      <h4>Research & Others</h4>
+                      <h3>Research, Core projects and Others</h3>
                     </div>
                     <div class="icon"></div>
                   </div>
@@ -480,7 +488,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
       <section class="about">
         <div class="container">
           <div class="row-up">
