--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -349,20 +349,20 @@
                     <fieldset id="nation">
                       <div class="checkbox">
                         <input type="checkbox" name="programs" value="CSE" />
-                        <label for="CSE">CSE</label>
+                        <label for="CSE">CSE (Computer Science & Engineering)</label>
                       </div>
                       <div class="checkbox">
                         <input type="checkbox" name="programs" value="ECE" />
-                        <label for="ECE">ECE</label>
+                        <label for="ECE">ECE (Electronics & Communication Enginnering)</label>
                       </div>
                       <div class="checkbox">
                         <input type="checkbox" name="programs" value="MEA" />
-                        <label for="MEA">MEA</label>
+                        <label for="MEA">MEA (Mechatronics Engineering)</label>
                       </div>
-                      <div class="checkbox">
+                      <!-- <div class="checkbox">
                         <input type="checkbox" name="programs" value="MAC" />
                         <label for="MAC">MAC</label>
-                      </div>
+                      </div> -->
                     </fieldset>
                   </div>
                 </div>
@@ -487,7 +487,7 @@
                 <div class="row-div">
                   <div class="form-group">
                     <h3 for="ogn">Mode of Selection:</h3>
-                    <select id="nation" name="spmode">
+                    <!-- <select id="nation" name="spmode">
                       <option value="Shortlist from CVs">
                         Shortlist from CVs
                       </option>
@@ -499,7 +499,29 @@
                       <option value="Personal Interview">
                         Personal Interview
                       </option>
-                    </select>
+                    </select> -->
+                    <fieldset id="nation">
+                      <div class="checkbox">
+                        <input type="checkbox" name="programs" value="Shortlist form CVs" />
+                        <label for="CSE">Shortlist form CVs</label>
+                      </div>
+                      <div class="checkbox">
+                        <input type="checkbox" name="programs" value="Online Test" />
+                        <label for="ECE">Online Test</label>
+                      </div>
+                      <div class="checkbox">
+                        <input type="checkbox" name="programs" value="Written Test" />
+                        <label for="MEA">Written Test</label>
+                      </div>
+                      <div class="checkbox">
+                        <input type="checkbox" name="programs" value="Technical Interview" />
+                        <label for="MAC">Technical Interview</label>
+                      </div>
+                      <div class="checkbox">
+                        <input type="checkbox" name="programs" value="Personal Interview" />
+                        <label for="MAC">Personal Interview</label>
+                      </div>
+                    </fieldset>
                   </div>
                   <div class="form-group">
                     <h3 for="dgn">Number of Rounds:</h3>
