--- a/views/for-recruiters.ejs
+++ b/views/for-recruiters.ejs
@@ -580,11 +580,11 @@
               </p>
               <p>
                 <i class="fa-solid fa-phone"></i>
-                <span> +91-95899-95899</span>
+                <span> +91-7484055317</span>
               </p>
               <p>
                 <i class="fa-solid fa-envelope"></i>
-                <span> tpo@iiitbh.ac.in</span>
+                <span> tnp_fic@iiitbh.ac.in</span>
               </p>
             </div>
 
@@ -1172,11 +1172,11 @@
               </p>
               <p>
                 <i class="fa-solid fa-phone"></i>
-                <a href="tel:+918962541634"> +91-8962541634</a>
+                <a href="tel:+917484055317"> +91-7484055317</a>
               </p>
               <p>
                 <i class="fa-solid fa-envelope"></i>
-                <a href="mailto:tpo@iiitbh.ac.in"> tpo@iiitbh.ac.in</a>
+                <a href="mailto:tnp_fic@iiitbh.ac.in"> tnp_fic@iiitbh.ac.in</a>
               </p>
             </div>
             <div class="map-embed">
