--- a/views/index.ejs
+++ b/views/index.ejs
@@ -427,7 +427,7 @@
           <div class="row-down">
             <div class="activities">
               <div class="graph">
-                <img src="/assets\activity-graph.svg" alt="activity graph">
+                <img src="/assets\activity-graph.svg" alt="activity graph" />
               </div>
               <div class="detail-timeline">
                 <div class="timeline-item">
@@ -438,9 +438,9 @@
                     <div class="icon"></div>
                   </div>
                   <div class="bottom-bar">
-                    <div id="less-than-1">&lt 5k</div>
-                    <div id="between-1">&lt 10k</div>
-                    <div id="greater-than-1">&gt 10k</div>
+                    <div id="less-than-1"><span>&lt 5k</span></div>
+                    <div id="between-1"><span>&lt 10k</span></div>
+                    <div id="greater-than-1"><span>&gt 10k</span></div>
                   </div>
                 </div>
                 <div class="timeline-item">
@@ -451,9 +451,9 @@
                     <div class="icon"></div>
                   </div>
                   <div class="bottom-bar">
-                    <div id="less-than-2">&gt= 500</div>
-                    <div id="between-2">&gt= 300</div>
-                    <div id="greater-than-2">&lt 300</div>
+                    <div id="less-than-2"><span>&gt= 500</span></div>
+                    <div id="between-2"><span>&gt= 300</span></div>
+                    <div id="greater-than-2"><span>&lt 300</span></div>
                   </div>
                 </div>
                 <div class="timeline-item">
@@ -464,10 +464,10 @@
                     <div class="icon"></div>
                   </div>
                   <div class="bottom-bar">
-                    <div id="less-than-3">Startup</div>
-                    <div id="between-3">Apps</div>
-                    <div id="between-2-3">Websites</div>
-                    <div id="greater-than-3">Others</div>
+                    <div id="less-than-3"><span>Startup</span></div>
+                    <div id="between-3"><span>Apps</span></div>
+                    <div id="between-2-3"><span>Websites</span></div>
+                    <div id="greater-than-3"><span>Others</span></div>
                   </div>
                 </div>
                 <div class="timeline-item">
@@ -478,14 +478,43 @@
                     <div class="icon"></div>
                   </div>
                   <div class="bottom-bar">
-                    <div id="less-than-4">Robotics</div>
-                    <div id="between-4">Cyber Security</div>
-                    <div id="between-2-4">AI/ML</div>
-                    <div id="greater-than-4">Others</div>
+                    <div id="less-than-4"><span>Robotics</span></div>
+                    <div id="between-4"><span>Cyber Security</span></div>
+                    <div id="between-2-4"><span>AI/ML</span></div>
+                    <div id="greater-than-4"><span>Others</span></div>
                   </div>
                 </div>
               </div>
             </div>
+          </div>
+          <div class="bottom-strip">
+            <div class="color-panel">
+              <div class="color-detail">
+                <div class="color" style="background-color: #FFBC00;"></div>
+                <div class="color-desc">
+                  <p>Competitive Prog...</p>
+                </div>
+              </div>
+              <div class="color-detail">
+                <div class="color" style="background-color: #00ADEF;"></div>
+                <div class="color-desc">
+                  <p>Development</p>
+                </div>
+              </div>
+              <div class="color-detail">
+                <div class="color" style="background-color: #80CC28;"></div>
+                <div class="color-desc">
+                  <p>Entreprenuership</p>
+                </div>
+              </div>
+              <div class="color-detail">
+                <div class="color" style="background-color: #FC2779;"></div>
+                <div class="color-desc">
+                  <p>Research & Others</p>
+                </div>
+              </div>
+            </div>
+            <a href="#" class="know-more">Know More</a>
           </div>
         </div>
       </section>
