--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -66,9 +66,9 @@
           <div class="menu-item">
             <a href="https://iiitbh.pod.ai/">Placement portal</a>
           </div>
-          <div class="menu-item" onclick="window.open('/profile','_target');">
+          <!-- <div class="menu-item" onclick="window.open('/profile','_target');">
             Student Profile
-          </div>
+          </div> -->
           <div
             class="menu-item"
             onclick="window.open('/admin','_target');"
@@ -78,9 +78,9 @@
           <div class="menu-item">Help</div>
         </div>
         <div class="pcnav">
-          <div class="menu-item" onclick="window.open('/profile','_target');">
+          <!-- <div class="menu-item" onclick="window.open('/profile','_target');">
             Student Profile
-          </div>
+          </div> -->
           <div
             class="menu-item"
             onclick="window.open('/admin','_target');"
