--- a/views/index.ejs
+++ b/views/index.ejs
@@ -223,7 +223,7 @@
                       <li>
                         <div
                           class="btn-item"
-                          onclick="window.open('/assets/Plcement_Brochure_21_22.pdf');"
+                          onclick="window.open('/assets/Brochure2023-24.pdf');"
                         >
                           <img src="/assets/doc-icon.svg" alt="" />
                           <h3>Placement Brochure</h3>
