Navbar link corrected

--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -58,7 +58,7 @@
             <a href="/institute">About</a>
           </div>
           <div class="menu-item" id="recruit1">
-            <a href="/forRecuiters">For Recruiters</a>
+            <a href="/forRecruiters">For Recruiters</a>
           </div>
           <div class="menu-item" id="people1">
             <a href="/contact">People</a>
