Placement Data for Batch 2023 Updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,20 @@
 
       gtag("config", "G-88FK0NC77G");
     </script>
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "g1cd7146rd");
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -408,7 +422,7 @@
           </div>
         </div>
       </section>
-      <section class="students-acheiv">
+      <!-- <section class="students-acheiv">
         <div class="container">
           <div class="row-up">
             <div class="heading">
@@ -418,7 +432,7 @@
               </div>
             </div>
             <div class="social">
-              <h4>Last updated: Jan, 2023 🔔</h4>              
+              <h4>Last updated: Jan, 2023 🔔</h4>
             </div>
           </div>
           <div class="row-down">
@@ -487,25 +501,25 @@
           <div class="bottom-strip">
             <div class="color-panel">
               <div class="color-detail">
-                <div class="color" style="background-color: #FFBC00;"></div>
+                <div class="color" style="background-color: #ffbc00"></div>
                 <div class="color-desc">
                   <p>Competitive Prog...</p>
                 </div>
               </div>
               <div class="color-detail">
-                <div class="color" style="background-color: #00ADEF;"></div>
+                <div class="color" style="background-color: #00adef"></div>
                 <div class="color-desc">
                   <p>Development</p>
                 </div>
               </div>
               <div class="color-detail">
-                <div class="color" style="background-color: #80CC28;"></div>
+                <div class="color" style="background-color: #80cc28"></div>
                 <div class="color-desc">
                   <p>Entreprenuership</p>
                 </div>
               </div>
               <div class="color-detail">
-                <div class="color" style="background-color: #FC2779;"></div>
+                <div class="color" style="background-color: #fc2779"></div>
                 <div class="color-desc">
                   <p>Research & Others</p>
                 </div>
@@ -514,7 +528,7 @@
             <a href="#" class="know-more">Know More</a>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="about">
         <div class="container">
           <div class="row-up">
