--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -101,7 +101,7 @@
           </div>
           <div class="content-fr">
             <div class="card">
-              <img src="/assets/placement-details_23.png" alt="" />
+              <img src="/assets/placement-details_23.svg" alt="" />
             </div>
           </div>
         </div>
