--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -454,10 +454,10 @@
         </div>
         <div class="side-container">
           <div class="side-div-up">
-            <div class="button" id="placement">
+            <div class="button active-button" id="placement">
               <a href="#">Batch 2023</a>
             </div>
-            <div class="button active-button" id="facilities">
+            <div class="button" id="facilities">
               <a href="#">Batch 2022</a>
             </div>
             <div class="button" id="demographics">
